// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopPagesHistorical when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <figure
    class="bar-chart__top-pages loaded"
    data-source="http://www.example.com/data//foobar.json"
  >
    <div
      class="data bar-chart"
    >
      <div
        class="bin"
      >
        <div
          class="label"
        >
          <a
            href="http://tools.usps.com"
            rel="noopener"
            target="_blank"
          >
            tools.usps.com
          </a>
        </div>
        <div
          class="value"
        >
          126,859,658
        </div>
        <div
          class="bar"
          style="width: 92.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          <a
            href="http://tools.usps.com"
            rel="noopener"
            target="_blank"
          >
            tools.usps.com
          </a>
        </div>
        <div
          class="value"
        >
          137,854,682
        </div>
        <div
          class="bar"
          style="width: 100.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          <a
            href="http://www.time.gov"
            rel="noopener"
            target="_blank"
          >
            www.time.gov
          </a>
        </div>
        <div
          class="value"
        >
          1,266,571
        </div>
        <div
          class="bar"
          style="width: 2.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          <a
            href="http://time.gov"
            rel="noopener"
            target="_blank"
          >
            time.gov
          </a>
        </div>
        <div
          class="value"
        >
          670,903
        </div>
        <div
          class="bar"
          style="width: 1.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          <a
            href="http://informeddelivery.usps.com"
            rel="noopener"
            target="_blank"
          >
            informeddelivery.usps.com
          </a>
        </div>
        <div
          class="value"
        >
          38,515,219
        </div>
        <div
          class="bar"
          style="width: 29.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          <a
            href="http://reg.usps.com"
            rel="noopener"
            target="_blank"
          >
            reg.usps.com
          </a>
        </div>
        <div
          class="value"
        >
          42,294,001
        </div>
        <div
          class="bar"
          style="width: 31.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          <a
            href="http://tools.usps.com"
            rel="noopener"
            target="_blank"
          >
            tools.usps.com
          </a>
        </div>
        <div
          class="value"
        >
          31,254,428
        </div>
        <div
          class="bar"
          style="width: 23.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          <a
            href="http://www.usps.com"
            rel="noopener"
            target="_blank"
          >
            www.usps.com
          </a>
        </div>
        <div
          class="value"
        >
          30,140,169
        </div>
        <div
          class="bar"
          style="width: 23.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          <a
            href="http://www.usps.com"
            rel="noopener"
            target="_blank"
          >
            www.usps.com
          </a>
        </div>
        <div
          class="value"
        >
          32,447,672
        </div>
        <div
          class="bar"
          style="width: 24.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          <a
            href="http://reg.usps.com"
            rel="noopener"
            target="_blank"
          >
            reg.usps.com
          </a>
        </div>
        <div
          class="value"
        >
          27,517,507
        </div>
        <div
          class="bar"
          style="width: 21.0%;"
        />
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`TopPagesHistorical when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <figure
    class="bar-chart__top-pages loading"
    data-source="http://www.example.com/data//foobar.json"
  >
    <div
      class="data bar-chart"
    />
  </figure>
</DocumentFragment>
`;

exports[`TopPagesHistorical when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <figure
    class="bar-chart__top-pages error"
    data-source="http://www.example.com/data//foobar.json"
  >
    <div
      class="data bar-chart"
    />
  </figure>
</DocumentFragment>
`;
